--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
 body{
+    width: 100vw;
+    height:100vh;
     background-color: aqua;
+    margin: 0;
+    display: grid;
+    grid-template-columns:20% 80%;
+    grid-template-areas: "nav header"
+    "nav main"
+    "nav main"
+    "nav main"
+    "nav main"
+    "nav main";
+}  
+header{
+    grid-area: header;
+    border: 1px solid black;
+}
+nav{
+    grid-area: nav;
+    border: 1px solid black;
+}
+main{
+    grid-area: main;
+    border: 1px solid black;
 }
