--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body{
     width: 100vw;
     height:100vh;
-    background-color: aqua;
     margin: 0;
     display: grid;
     grid-template-columns:20% 80%;
@@ -15,12 +14,41 @@ body{
 header{
     grid-area: header;
     border: 1px solid black;
-}
+    background-color: whitesmoke;
+    display: flex;
+    justify-content: space-between;
+}   
 nav{
     grid-area: nav;
+    text-align: center;
     border: 1px solid black;
+    background-color: rgb(3, 196, 255);
+    color: white;
+    display: flex;
+    flex-direction: column;
 }
 main{
     grid-area: main;
+    background-color: rgb(178, 182, 185);
     border: 1px solid black;
+    display: flex;
+    justify-content: space-around;
+}
+div{
+    border: 1px solid black;
+}
+.iconimg{
+    width: 25px;
+    height: 25px;
+}
+.profileimg{
+    width: 35px;
+    height: 35px;
+}
+h3{
+    font-size: 30px;
+    display: inline-block;
+}
+ul{
+    list-style: none;
 }
