--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     width: 100vw;
     height:100vh;
     margin: 0;
+    font-family: Roboto;
     display: grid;
     grid-template-columns:20% 80%;
     grid-template-areas: "nav header"
@@ -20,12 +21,9 @@ header{
 }   
 nav{
     grid-area: nav;
-    text-align: center;
     border: 1px solid black;
-    background-color: rgb(3, 196, 255);
+    background-color: rgb(5, 167, 216);
     color: white;
-    display: flex;
-    flex-direction: column;
 }
 main{
     grid-area: main;
@@ -33,9 +31,6 @@ main{
     border: 1px solid black;
     display: flex;
     justify-content: space-around;
-}
-div{
-    border: 1px solid black;
 }
 .iconimg{
     width: 25px;
@@ -49,6 +44,24 @@ h3{
     font-size: 30px;
     display: inline-block;
 }
-ul{
+ul>li{
     list-style: none;
+    display: table;
+    font-weight: bold;
+    font-size: 30px;
+    margin-bottom: 5px;
+}
+#hdiv1,#hdiv2{
+    width: 50%;
+}
+#mdiv1,#mdiv2{
+    width: 50%;
+}
+h1{
+    width: 100%;
+    margin-left: 15px;
+    font-size: 40px;
+}
+ul:last-of-type{
+    margin-top: 100px;
 }
