--- a/style.css
+++ b/style.css
@@ -4,45 +4,56 @@ body{
     margin: 0;
     font-family: Roboto;
     display: grid;
-    grid-template-columns:20% 80%;
+    grid-template-columns:0.5fr 4fr;
+    grid-template-rows:auto 4fr;;
     grid-template-areas: "nav header"
-    "nav main"
-    "nav main"
-    "nav main"
-    "nav main"
     "nav main";
 }  
 header{
     grid-area: header;
-    border: 1px solid black;
-    background-color: whitesmoke;
+    box-shadow: 0px 1px 5px 1px rgba(0,0,0,0.23);
+    position: relative;
+    background-color: white;
+    display: grid;
+    grid-template-columns:2fr 1fr;
+    grid-template-rows:auto 1fr;
+}
+.searchcont{
     display: flex;
-    justify-content: space-between;
-}   
+    align-items: center;
+    gap: 1rem;
+}
+.profilecont,.buttoncont{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+}
+.welcomecont{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
 nav{
     grid-area: nav;
-    border: 1px solid black;
     background-color: rgb(5, 167, 216);
     color: white;
 }
 main{
     grid-area: main;
-    background-color: rgb(178, 182, 185);
-    border: 1px solid black;
+    background-color: #E2E8F0;
+
     display: flex;
     justify-content: space-around;
+    
 }
 .iconimg{
     width: 25px;
     height: 25px;
 }
 .profileimg{
-    width: 35px;
-    height: 35px;
-}
-h3{
-    font-size: 30px;
-    display: inline-block;
+    width: 55px;
+    height: 55px;
 }
 ul>li{
     list-style: none;
@@ -51,9 +62,7 @@ ul>li{
     font-size: 30px;
     margin-bottom: 5px;
 }
-#hdiv1,#hdiv2{
-    width: 50%;
-}
+
 #mdiv1,#mdiv2{
     width: 50%;
 }
@@ -64,4 +73,23 @@ h1{
 }
 ul:last-of-type{
     margin-top: 100px;
+}
+input{
+    border-radius: 10px;
+    border:none;
+    background-color: #E2E8F0;
+    flex: 1;
+}
+input:focus{
+    outline: none;
+    border:0.5px solid rgb(5, 167, 216);
+}
+button{
+    font-size: 1rem;
+    border:none;
+    border-radius: 20px;
+    background-color:rgb(5, 167, 216);
+    color: white;
+    width: 6rem;
+    height: 2rem;
 }
