--- a/style.css
+++ b/style.css
@@ -42,10 +42,26 @@ nav{
 main{
     grid-area: main;
     background-color: #E2E8F0;
-
-    display: flex;
-    justify-content: space-around;
-    
+    display: grid;
+    grid-template-columns:3fr 1fr;
+}
+.mdiv.div2{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+.mdiv.div1{
+    display: grid;
+    grid-template-columns: repeat(3,auto);
+    grid-template-rows: repeat(3,auto);
+}
+.card{
+    width: 90%;
+    height: 95%;
+    border: none;
+    margin: 16px auto;
+    box-shadow: 0px 0px 3px 1px rgba(0,0,0.20);
+    background-color: white;
+    border-radius: 13px;
 }
 .iconimg{
     width: 25px;
@@ -61,10 +77,6 @@ ul>li{
     font-weight: bold;
     font-size: 30px;
     margin-bottom: 5px;
-}
-
-#mdiv1,#mdiv2{
-    width: 50%;
 }
 h1{
     width: 100%;
