--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header{
     grid-area: header;
     box-shadow: 0px 1px 5px 1px rgba(0,0,0,0.23);
     position: relative;
-    background-color: white;
+    background: linear-gradient(302deg, rgba(7,228,177,1) 0%, rgba(0,251,248,1) 52%, rgba(0,125,255,1) 100%);
     display: grid;
     grid-template-columns:2fr 1fr;
     grid-template-rows:auto 1fr;
@@ -36,12 +36,12 @@ header{
 }
 nav{
     grid-area: nav;
-    background-color: rgb(5, 167, 216);
+    background: linear-gradient(6deg, rgba(28,201,162,1) 0%, rgba(0,251,248,1) 52%, rgba(0,125,255,1) 89%);
     color: white;
 }
 main{
     grid-area: main;
-    background-color: #E2E8F0;
+    background: linear-gradient(203deg, rgba(7,228,177,1) 0%, rgba(0,251,248,1) 52%, rgba(0,125,255,1) 100%);
     display: grid;
     grid-template-columns:3fr 1fr;
 }
@@ -60,8 +60,16 @@ main{
     border: none;
     margin: 16px auto;
     box-shadow: 0px 0px 3px 1px rgba(0,0,0.20);
-    background-color: white;
+    background: linear-gradient(180deg, rgba(3,255,214,1) 0%, rgba(255,235,0,1) 57%, rgba(203,255,3,1) 91%);
     border-radius: 13px;
+   
+}
+.sideborder{
+    width: 15px;
+    height: 99.4%;
+    background: linear-gradient(0deg, rgba(7,153,228,1) 0%, rgba(0,216,251,1) 52%, rgba(0,212,255,1) 100%);
+    border: 1px solid whitesmoke;
+    border-radius: 10px 0 0 10px;
 }
 .iconimg{
     width: 25px;
@@ -104,4 +112,9 @@ button{
     color: white;
     width: 6rem;
     height: 2rem;
+}
+.card p:not(.sideborder),.card h2:not(.sideborder){
+    text-align: center;
+    margin: 55px;
+    font-size: 1.1rem;
 }
